# Thor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.build/: misc_trejnisto
engine/krepusko/concurrency/: signal.yr  timer.yr
engine/krepusko/core/: _.yr  activity.yr  application.yr  input.yr  window.yr
engine/krepusko/interface/: drawer.yr  font.yr  widget.yr
engine/krepusko/math/: matrix.yr  utils.yr  vector.yr
engine/krepusko/opengl/: buffers.yr  cubemap.yr  depthbuffer.yr  gbuffer.yr  gtexture.yr  indexed_mesh.yr  mesh.yr  shader.yr  texture.yr  timer.yr  uniform.yr  vertex.yr
engine/krepusko/utils/: _.yr  fs.yr  option.yr
engine/sdl2/: _.yr  events.yr  gesture.yr  image.yr  joystick.yr  keyboard.yr  keycode.yr  mouse.yr  opengl.yr  opengl_ext.yr  pixels.yr  rect.yr  rwops.yr  scancode.yr  sdl.yr  stdinc.yr  surface.yr  timer.yr  touch.yr  ttf.yr  version.yr  video.yr
resources/config/: gl3.ini
resources/models/rayman/: rayman.mtl
test/fst/: main.yr
test/misc/: main.yr
